fix(broadcast): add max-height to chat when on small screens

--- a/frontend/src/views/Broadcast/style.scss
+++ b/frontend/src/views/Broadcast/style.scss
@@ -6,13 +6,9 @@
   flex-direction: row;
   flex-grow: 1;
   flex-shrink: 1;
-
-  @media (max-width: 1000px) {
-    flex-direction: column;
-  }
 }
 
-.playerContainer {
+.player-container {
   height: 100%;
   width: 70%;
   float: left;
@@ -23,8 +19,17 @@
     width: 100%;
     overflow-x: hidden;
   }
+}
 
-  @media (max-width: 1000px) {
+@media (max-width: 1000px) {
+  .room-sidebar {
+    height: 50%;
+  }
+  .player-container {
     width: 100%;
+    height: 50%;
+  }
+  .broadcast-container {
+    flex-direction: column;
   }
 }
